02-Rewrite-Path-Url/rewrite-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-url-rewrite
spec:
  parentRefs:
    - name: eg
  hostnames:
    - path.rewrite.example
  rules:
    - matches:
      - path:
          value: "/get"
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /replace  # Replaces this part of your choice
      backendRefs:
      - name: backend
        port: 3000

       # First port forward the service to localhost:80
       # kubectl port-forward svc/backend 9090:80 --address 0.0.0.0

       # Access app using this command:  curl -L -vvv -H "Host: path.rewrite.example" http://localhost/get
